1000_Mutations/Images/difference/541/long.txt
Microservice listening on http://localhost:3000/preview
conferences in the software-engineering domain think about empiricalresearch.### IntroductionThe Future of Empirical Research in Software EngineeringIn software engineering, empirical studies became more and moreimportant, especially over the past few years. Empirical studies comewith several obstacles. In this questionnaire, we are interested inthe **validity** of empirical studies. Typically, two kinds ofvalidity are of primary concern: internal and external validity.**Internal validity** is the degree to which the influence ofconfounding factors on the results are excluded. This allowsexperimenters to observe the results without bias. For example, whenrecruiting novice programmers, results are not biased by differentlevels of programming experience.In contrast, **external validity** is the degree to which results ofone experiment can be generalized. For example, when recruitingprogrammers with different levels of programming experience, accordingexperimental results apply to these different levels of programmingexperience.There is a trade-off between internal and external validity; only oneat a time can be maximized. There are different ways to address thistrade off in empirical research, and we would like your thoughts onthis.
/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:287
        throw invalidChar(read())
        ^

SyntaxError: JSON5: invalid character 'c' at 1:1
    at syntaxError (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1083:17)
    at invalidChar (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1028:12)
    at Object.value (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:287:15)
    at lex (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:78:42)
    at Object.parse (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:25:17)
    at Object.exports.render (/home/ubuntu/checkbox.io-micro-preview/marqdown.js:15:26)
    at /home/ubuntu/checkbox.io-micro-preview/index.js:23:29
    at FSReqCallback.readFileAfterClose [as oncomplete] (internal/fs/read_file_context.js:63:3) {
  lineNumber: 1,
  columnNumber: 1
}
